--- a/src/components/nav.components/top.nav.component/top.nav.component.css
+++ b/src/components/nav.components/top.nav.component/top.nav.component.css
@@ -7,6 +7,6 @@
 .topBar {
     z-index: 1400 !important;
     background-color: #222 !important;
-    box-shadow: 0 !important;;
-    padding-left: 0 !important;;
+    box-shadow: none !important;
+    padding-left: 0 !important;
 }
