--- a/src/components/nav.components/side.nav.component/side.nav.component.css
+++ b/src/components/nav.components/side.nav.component/side.nav.component.css
@@ -1,5 +1,5 @@
 .sideBar {
-    width:15% !important;
+    width:130px !important;
     background-color: #222 !important;
     border-right: solid 5px #FF8619 !important;
 }
